--- a/FoodAPI/FoodAPI/FoodAPI.csproj
+++ b/FoodAPI/FoodAPI/FoodAPI.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+	  <PackageReference Include="AutoMapper" Version="13.0.1" />
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.3" />
 	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.3" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
