--- a/FoodAPI/FoodAPI.Models/FoodAPI.Models.csproj
+++ b/FoodAPI/FoodAPI.Models/FoodAPI.Models.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.3" />
   </ItemGroup>
 
