--- a/YetiWeb/package.json
+++ b/YetiWeb/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.14",
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
   },
