SMTP Server setup for send email and Image Upload for Food Image

--- a/FoodAPI/FoodAPI/appsettings.json
+++ b/FoodAPI/FoodAPI/appsettings.json
@@ -13,5 +13,17 @@
     "Key": "YcxjOMewdFfeZFQm5iGAYxTjR23Z93rLbyZucty3",
     "Issuer": "https://localhost:7041",
     "Audience": "https://localhost:7041"
-  }
+  },
+  "EmailSettings": {
+    "Email": "ecoshop420@gmail.com",
+    "Password": "heaxhbpdjeszzhfy",
+    "Host": "smtp.gmail.com",
+    "DisplayName": "Aryan Dhamala",
+    "Port": 587
+  },
+  "CloudinarySettings": {
+    "CloudName": "dwzhyrwcu",
+    "ApiKey": "375926748973532",
+    "ApiSecret": "4_-I9I5NAmZG5PLH96Awn54kg8A"
+  } 
 }
