--- a/FoodAPI/FoodAPI/appsettings.json
+++ b/FoodAPI/FoodAPI/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=GAMMA\\SQLEXPRESS;Database=FoodApp;Trusted_Connection=True;TrustServerCertificate=True"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=TAUSHIF_REZA\\SQLEXPRESS;Database=FoodApp;Trusted_Connection=True;TrustServerCertificate=True"
+  },
   "Jwt": {
     "Key": "YcxjOMewdFfeZFQm5iGAYxTjR23Z93rLbyZucty3",
     "Issuer": "https://localhost:7041",
