List Resutrant, FoodItem and Add to cart from mobile completed

--- a/FoodAPI/FoodAPI/appsettings.json
+++ b/FoodAPI/FoodAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=GAMMA\\SQLEXPRESS;Database=FoodApp;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=TAUSHIF_REZA\\SQLEXPRESS;Database=FoodApp;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Jwt": {
     "Key": "YcxjOMewdFfeZFQm5iGAYxTjR23Z93rLbyZucty3",
