--- a/YetiMobile/YetiMobile/package.json
+++ b/YetiMobile/YetiMobile/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "@stripe/stripe-react-native": "^0.37.2",
     "axios": "^0.21.4",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "^49.0.13",
